--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "vue": "^2.0.0-beta.6",
+    "vue": "2.0.5",
     "babel-runtime": "^6.0.0"
   },
   "devDependencies": {
@@ -68,7 +68,7 @@
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.0.0",
-    "vue-loader": "^9.3.0",
+    "vue-loader": "^9.8.1",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.12.6",
     "webpack-dev-middleware": "^1.4.0",
